--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,21 @@
     <meta content="#000000" name="theme-color"/>
     <meta content="Web site created using create-react-app" name="description"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <title>Portfolio | Alexy DE BARROS</title>
+    <title>Portfolio | Chrislin Mabounda</title>
     <meta content="Self Developed personal website build with React.js" name="description">
 
     <!-- Google / Search Engine Tags -->
-    <meta content="Alexy DE BARROS | Portfolio" itemprop="name">
+    <meta content="Chrislin Mabounda | Portfolio" itemprop="name">
     <meta content="Self Developed personal website build with React.js" itemprop="description">
 
     <!-- Facebook Meta Tags -->
     <meta content="website" property="og:type">
-    <meta content="Alexy DE BARROS | Portfolio" property="og:title">
+    <meta content="Chrislin Mabounda | Portfolio" property="og:title">
     <meta content="Self Developed personal website build with React.js" property="og:description">
 
     <!-- Twitter Meta Tags -->
     <meta content="summary_large_image" name="twitter:card">
-    <meta content="Alexy DE BARROS | Portfolio" name="twitter:title">
+    <meta content="Chrislin Mabounda | Portfolio" name="twitter:title">
     <meta content="Self Developed personal website build with React.js" name="twitter:description">
 </head>
 
